# ai_projects

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Common.cmake  Dockerfile  README.md  conanfile.py  project_setup.bash  project_setup.py  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post_create_command.bash
ForeignModules/: CMakeLists.txt
Layers/: CMakeLists.txt
Layers/include/Layers/: BaseLayer.h  DenseLayer.h
Layers/src/Layers/: BaseLayer.cpp  DenseLayer.cpp
LocalSearch/: CMakeLists.txt
LoggingLib/: CMakeLists.txt
LoggingLib/docs/: Documentation.md
LoggingLib/include/LoggingLib/: Logger.h  LoggingLib.h  LoggingLib.hpp
LoggingLib/include/StreamWrappers/: BaseStreamWrapper.hpp  DecolorizingStream.hpp
LoggingLib/src/LoggingLib/: Logger.cpp  LoggingLib.cpp
LoggingLib/tests/: TestLoggingLib.cpp  TestStreamWrappers.cpp
MLCore/: CMakeLists.txt
MLCore/docs/: Documentation.md
MLCore/include/: BasicTensor.h
MLCore/include/AutoDiff/: ComputationGraph.h  DerivativeExtractor.h  GraphNodes.h  GraphNodes.hpp  GraphOperations.h
MLCore/include/MLCore/: BasicTensor.h  BasicTensorSlice.h  SlicedTensorIterator.hpp  TensorIterator.hpp  TensorOperations.h  Utilities.h
MLCore/include/Models/: Callback.hpp  ILayer.hpp  IMeasurable.hpp  IMetric.hpp  IOptimizer.hpp
MLCore/src/AutoDiff/: ComputationGraph.cpp  DerivativeExtractor.cpp  GraphNodes.cpp  GraphOperations.cpp
MLCore/src/MLCore/: BasicTensor.cpp  BasicTensorSlice.cpp  TensorOperations.cpp  TensorOperationsImpl.cpp  Utilities.cpp
MLCore/tests/: TestBasicTensor.cpp  TestBasicTensorSlice.cpp  TestComputationGraph.cpp  TestDerivativeExtractor.cpp  TestModels.cpp  TestTensorOperations.cpp
Utilities/: CMakeLists.txt
Utilities/docs/: Documentation.md
Utilities/include/Utilities/: ThreadPool.h  ThreadSafeQueue.hpp
Utilities/src/: main.cpp
Utilities/src/Utilities/: ThreadPool.cpp
Utilities/tests/: TestThreadPool.cpp
cpplibs/Datasets/: CMakeLists.txt
cpplibs/Datasets/tests/: TestBatchProviders.cpp  TestDatasets.cpp
cpplibs/Interfaces/: CMakeLists.txt
cpplibs/Layers/: CMakeLists.txt
cpplibs/Layers/tests/: DummyLayer.hpp  LayersTestFixture.hpp  TestDenseLayer.cpp  TestSequentialLayer.cpp  TestWeightsSerializer.cpp  Utilities.hpp
cpplibs/LoggingLib/: CMakeLists.txt  Changelog.md
cpplibs/LoggingLib/docs/: Documentation.md
cpplibs/LoggingLib/tests/: TestLoggingLib.cpp  TestStreamWrappers.cpp
cpplibs/MLCore/: CMakeLists.txt  Changelog.md
cpplibs/MLCore/docs/: Documentation.md
cpplibs/MLCore/tests/: ComputationGraphScenarios.hpp  GraphConstructionUtils.hpp  OperatorStatsUtils.hpp  TestBasicTensor.cpp  TestBasicTensorSlice.cpp  (+5 more)
cpplibs/Utilities/: CMakeLists.txt  Changelog.md
pymodules/datasets_loading/: raw_ds_fetching.py  raw_ds_processing.py  tensors_serializing.py
pymodules/utilities/: __init__.py  logging_utils.py
setuputils/: .clang-format  .clang-tidy  Common.cmake
setuputils/conan/: profile_debug.ini  profile_dev.ini  profile_release.ini
sound_processing/tests/: __init__.py  test_audio_signal.py  test_wav_audio_decoder.py  test_wav_audio_encoder.py
(+151 files in other folders)
